public/css/style.css
/* Reset */
*,
*::before,
*::after {
  box-sizing:border-box;
}

* {
  margin: 0;
  font: inherit;
  font-family: 'Caveat', sans-serif;
}

img, svg {
  display: block;
  max-width: 100%;
}
/* Basic Styling */

html {
  font-size: 62.5%;
}

body {
  background-image: url("/images/coffee-stains.jpg");
  color: #78290F;
}
h1 {
  font-size: 6.5rem;
  letter-spacing: 1.5px;
  text-decoration: underline;
}

h1, h2{
  text-align: center;
}

h2 {
  font-size: 3.5rem;
  font-weight: 700;
  margin-bottom: 0;
}

.bold {
  font-weight: 700;
}

/* Container */
.container {
  max-width: 800px;
  position: relative;
  margin: 25px auto 50px;
}

/* Buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: #001524;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

.prev:hover, .next:hover {
  background-color: rgba(0, 21, 36, .7);
}

.btn-container{
  margin-top: 10px;
  margin-left: 20px;
}

button {
  background-color: #001524;
  color: #FFECD1;
  line-height: 1;
  padding: 1rem 2rem;
  border: 0;
  border-radius: .5rem;
  cursor: pointer;
  font-size: 2.5rem;
}

button:hover {
  background-color: rgba(0, 21, 36, .9)
}

.update-btn {
  margin: 0 0 0 5.5rem;
}

.delete-btn {
  margin: 0 0 0 1rem;
}

.cards {
  border: 5px solid #001524;
  width: 100%;
  height: 450px;
  border-radius: 25px;
  padding: 1rem;
  box-shadow: 10px 10px 2px rgba(0, 21, 36, .8);
}

.slides-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.mySlides {
  display: none;
}


.text {
  color: #001524;
  font-size: 3rem;
  padding: .5rem;
  bottom: 8px;
  width: 100%;
  margin: 0 0 0 70px;
}


.numbertext {
  justify-content: flex-end;
  color: #001524;
  font-size: 3rem;
  padding: 10px 30px 0 0;
  top: 0;
  right: 0;
  position: absolute;
  display: flex;
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

/* Form */

.form {
  padding: 40px 70px;
}
label {
  color: #001524;
  display: block;
  font-size: 1.75rem;
  font-weight: 700;
  letter-spacing: 0.1em;
  text-transform: uppercase;
}

input {
  margin: 0 0 1em 0;
  width: 100%;
  font-family: sans-serif;
}


/* Update */
.hidden {
  display: none;
}
.modal-container {
  padding: 30px 30px;
  background: #FFECD1;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 30vw;
  border: 5px solid #001524;
  border-radius: 25px;
  box-shadow: 10px 10px 2px rgba(0, 21, 36, .8);
}

.bg{
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1040;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(40px);
}

.modal > div{
  display: flex;
  margin: auto;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* Responsive */

@media (max-width: 680px) {
  body {
    padding: .5rem .8rem;
  }

  .text {
    margin: 0 0 0 1.5rem;
    font-size: 1.5rem;
  }

  .update-btn {
    margin: 0 0 0 1.75rem;
  }

  .delete-btn {
    margin: 0 0 0 .75rem;
  }

  .numbertext {
    font-size: 1rem;
  }
}

@media (max-width: 1050px) {
  body {
    padding: .5rem .8rem;
  }
  .modal-container {
    width: 75vw;
  }
}

